microservice/kube/frontend/front-end-gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: platform-frontend-gw
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "srv.algotrade.dev"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "srv.algotrade.dev"
    tls:
      mode: SIMPLE
      credentialName: platform-frontend-cert-secret
